Personalización del proyecto
Signed-off-by: Jesus Castellanos SC <jesus.castellanos@solem.cl>

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
               <a href="#">
                 <img src="src/images/covers/echame-la-culpa.jpg" alt="echame la culpa" />
                 <span>
-                  Leonidas Esteban
+                  Jesus .A. Castellanos P.
                 </span>
               </a>
             </li>
@@ -115,7 +115,7 @@
               <a href="#">
                 <img src="src/images/covers/echame-la-culpa.jpg" alt="echame la culpa" />
                 <span>
-                  Leonidas Esteban
+                  Jesus .A. Castellanos P.
                 </span>
               </a>
             </li>
@@ -131,7 +131,7 @@
               <a href="#">
                 <img src="src/images/covers/echame-la-culpa.jpg" alt="echame la culpa" />
                 <span>
-                  Leonidas Esteban
+                  Jesus .A. Castellanos P.
                 </span>
               </a>
             </li>
@@ -147,7 +147,7 @@
               <a href="#">
                 <img src="src/images/covers/echame-la-culpa.jpg" alt="echame la culpa" />
                 <span>
-                  Leonidas Esteban
+                  Jesus .A. Castellanos P.
                 </span>
               </a>
             </li>
@@ -166,8 +166,8 @@
         <div class="primary-user">
           <div class="user">
             <p>
-              <img src="src/images/covers/gorillaz.jpg" alt=""/>
-              <span>Leonidas Esteban</span>
+              <img src="src/images/covers/SyHgyc_V_400x400.jpg" alt=""/>
+              <span>Jesus .A. Castellanos P.</span>
             </p>
           </div>
         </div>
